[gd_scene load_steps=3 format=3 uid="uid://ca223huxpi88m"]

[ext_resource type="Script" uid="uid://cxsw1oikl5xb8" path="res://src/renderer/name_table.gd" id="1_2p4vc"]
[ext_resource type="PackedScene" uid="uid://6n47u5q3nj4m" path="res://src/renderer/nametable_image.tscn" id="3_r318o"]

[node name="Nametable" type="Window"]
auto_translate_mode = 1
title = "Nametable"
initial_position = 4
size = Vector2i(475, 525)
min_size = Vector2i(475, 525)
script = ExtResource("1_2p4vc")
refresh_every_frame = true

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="NametableImage" parent="HBoxContainer/VBoxContainer" instance=ExtResource("3_r318o")]
layout_mode = 2
size_flags_horizontal = 4

[node name="Control" type="Control" parent="HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 5)
layout_mode = 2
size_flags_vertical = 4

[node name="NametableImage2" parent="HBoxContainer/VBoxContainer" instance=ExtResource("3_r318o")]
layout_mode = 2
size_flags_horizontal = 4
is_first_table = false

[node name="RightControls" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="AutoUpdateCheckBox" type="CheckBox" parent="HBoxContainer/RightControls"]
layout_mode = 2
button_pressed = true
text = "Update Every Frame"

[node name="DrawButton" type="Button" parent="HBoxContainer/RightControls"]
layout_mode = 2
text = "Draw Nametables"

[connection signal="toggled" from="HBoxContainer/RightControls/AutoUpdateCheckBox" to="." method="_on_auto_update_check_box_toggled"]
[connection signal="pressed" from="HBoxContainer/RightControls/DrawButton" to="." method="_on_pattern_table_test_button_pressed"]
